// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkAllButton renders correctly with default props 1`] = `
<div
  className="wds-notifications__mark-all-as-read-button"
>
  
  <a
    className="wds-notifications__mark-all-as-read"
  >
    notifications-mark-all-as-read
  </a>
</div>
`;

exports[`MarkAllButton renders correctly with non-empty header 1`] = `
<div
  className="wds-notifications__mark-all-as-read-button"
>
  <p
    className="wds-notifications__header"
  >
    blah
  </p>
  <a
    className="wds-notifications__mark-all-as-read"
  >
    notifications-mark-all-as-read
  </a>
</div>
`;
